--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -24,13 +24,17 @@
           </div>
 
           <div>
-            <img class="character" src="women_generated.png" alt="image" />
+            <img
+              class="character"
+              src="../images/women_generated.png"
+              alt="image"
+            />
           </div>
         </div>
 
         <div class="logoFooter">
-          <img src="./github-logo.png" />
-          <img src="./linkedin-logo.png" />
+          <img src="../images/github-logo.png" />
+          <img src="../images/linkedin-logo.png" />
         </div>
       </div>
       <div id="about" class="pageContainer">
@@ -38,8 +42,11 @@
         <div class="contentContainer">
           <div class="aboutBoxes">
             <div class="aboutBox">
-              <h2>Background</h2>
-              <p>
+              <div class="aboutHeader">
+                <h2>Background</h2>
+                <img class="arrow" src="../images/chevron-svgrepo-com.svg" />
+              </div>
+              <p class="hide">
                 I am a senior Computer Information Systems major at St. Mary's
                 University in San Antonio, Texas. Prior to this, I obtained
                 Associate's degrees in Business and Biology from Seminole State
@@ -51,8 +58,11 @@
               </p>
             </div>
             <div class="aboutBox">
-              <h2>Skillset</h2>
-              <p>
+              <div class="aboutHeader">
+                <h2>Skillset</h2>
+                <img class="arrow" src="../images/chevron-svgrepo-com.svg" />
+              </div>
+              <p class="hide">
                 I am proficient in C/C++, Java, and experienced in designing
                 normalized databases in MSSQL Server and SQLite. I also have
                 experience utilizing the .NET framework to create a C# GUI that
@@ -64,8 +74,15 @@
               </p>
             </div>
             <div class="aboutBox">
-              <h2>Objective</h2>
-              <p>
+              <div class="aboutHeader">
+                <h2>Objective</h2>
+                <object
+                  class="arrow"
+                  type="image/svg+xml"
+                  data="../images/chevron-svgrepo-com.svg"
+                ></object>
+              </div>
+              <p class="hide">
                 I am passionate about the possibilities that programming offers
                 in problem-solving, ranging from enhancing the efficiency of
                 simple tasks to developing software that can genuinely save
@@ -79,7 +96,11 @@
             </div>
           </div>
           <div class="character">
-            <img class="character" src="women_generated.png" alt="image" />
+            <img
+              class="character"
+              src="../images/women_generated.png"
+              alt="image"
+            />
           </div>
         </div>
       </div>
@@ -94,6 +115,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
   </body>
 </html>
