editing expand buttons

--- a/static/index.html
+++ b/static/index.html
@@ -43,8 +43,8 @@
           <div class="aboutBoxes">
             <div class="aboutBox">
               <div class="aboutHeader">
-                <h2>Background</h2>
-                <img class="arrow" src="../images/chevron-svgrepo-com.svg" />
+                <h2>Background <span class="expand">+</span></h2>
+                <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
               </div>
               <p class="hide">
                 I am a senior Computer Information Systems major at St. Mary's
@@ -59,8 +59,8 @@
             </div>
             <div class="aboutBox">
               <div class="aboutHeader">
-                <h2>Skillset</h2>
-                <img class="arrow" src="../images/chevron-svgrepo-com.svg" />
+                <h2>Skillset <span class="expand">+</span></h2>
+                <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
               </div>
               <p class="hide">
                 I am proficient in C/C++, Java, and experienced in designing
@@ -75,12 +75,12 @@
             </div>
             <div class="aboutBox">
               <div class="aboutHeader">
-                <h2>Objective</h2>
-                <object
+                <h2>Objective <span class="expand">+</span></h2>
+                <!-- <object
                   class="arrow"
                   type="image/svg+xml"
                   data="../images/chevron-svgrepo-com.svg"
-                ></object>
+                ></object> -->
               </div>
               <p class="hide">
                 I am passionate about the possibilities that programming offers
