--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div class="wrapper">
@@ -26,15 +30,15 @@
           <div>
             <img
               class="character"
-              src="../images/women_generated.png"
+              src="images/women_generated.png"
               alt="image"
             />
           </div>
         </div>
 
         <div class="logoFooter">
-          <img src="../images/github-logo.png" />
-          <img src="../images/linkedin-logo.png" />
+          <img src="images/github-logo.png" />
+          <img src="images/linkedin-logo.png" />
         </div>
       </div>
       <div id="about" class="pageContainer">
@@ -98,7 +102,7 @@
           <div class="character">
             <img
               class="character"
-              src="../images/women_generated.png"
+              src="images/women_generated.png"
               alt="image"
             />
           </div>
