fixed issues with rendering page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="wrapper">
       <div class="pageContainer">
         <div class="navbar">
           <ul id="nav">
-            <a href="#about"><li id="navElement">About</li></a>
-            <a href="#projects"><li id="navElement">Projects</li></a>
+            <li id="navElement"><a href="#about">About</a></li>
+            <li id="navElement"><a href="#projects">Projects</a></li>
             <li id="navElement">Contact</li>
           </ul>
         </div>
@@ -37,8 +47,8 @@
         </div>
 
         <div class="logoFooter">
-          <img src="images/github-logo.png" />
-          <img src="images/linkedin-logo.png" />
+          <img src="images/github-logo.png" alt="github-logo" />
+          <img src="images/linkedin-logo.png" alt="linkedin-logo" />
         </div>
       </div>
       <div id="about" class="pageContainer">
@@ -46,10 +56,9 @@
         <div class="contentContainer">
           <div class="aboutBoxes">
             <div class="aboutBox">
-              <div class="aboutHeader">
-                <h2>Background <span class="expand">+</span></h2>
-                <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
-              </div>
+              <h2>Background <span class="expand">+</span></h2>
+              <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
+
               <p class="hide">
                 I am a senior Computer Information Systems major at St. Mary's
                 University in San Antonio, Texas. Prior to this, I obtained
@@ -62,10 +71,9 @@
               </p>
             </div>
             <div class="aboutBox">
-              <div class="aboutHeader">
-                <h2>Skillset <span class="expand">+</span></h2>
-                <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
-              </div>
+              <h2>Skillset <span class="expand">+</span></h2>
+              <!-- <img class="arrow" src="../images/chevron-svgrepo-com.svg" /> -->
+
               <p class="hide">
                 I am proficient in C/C++, Java, and experienced in designing
                 normalized databases in MSSQL Server and SQLite. I also have
@@ -78,14 +86,13 @@
               </p>
             </div>
             <div class="aboutBox">
-              <div class="aboutHeader">
-                <h2>Objective <span class="expand">+</span></h2>
-                <!-- <object
+              <h2>Objective <span class="expand">+</span></h2>
+              <!-- <object
                   class="arrow"
                   type="image/svg+xml"
                   data="../images/chevron-svgrepo-com.svg"
                 ></object> -->
-              </div>
+
               <p class="hide">
                 I am passionate about the possibilities that programming offers
                 in problem-solving, ranging from enhancing the efficiency of
